trunk/Archive2/cf/72229605261f0b/output
main.cpp: In function 'int main()':
main.cpp:9:10: error: 'var' was not declared in this scope
     cin>>var>>var2
          ^
main.cpp:7:9: warning: unused variable 'var1' [-Wunused-variable]
     int var1;
         ^
